--- a/BackendFull/backEnd/config/config.env
+++ b/BackendFull/backEnd/config/config.env
@@ -2,6 +2,5 @@ PORT = 8000
 
 
 
-MONGO_URI  = mongodb://LikenStore:likensotre1@cluster0-shard-00-00.gmkix.mongodb.net:27017,cluster0-shard-00-01.gmkix.mongodb.net:27017,cluster0-shard-00-02.gmkix.mongodb.net:27017/LikenStore?ssl=true&replicaSet=atlas-ky72im-shard-0&authSource=admin&retryWrites=true&w=majority
-
+MONGO_URI  = 
 JWT_SECRET = NKSNFJNOF
